--- a/fil_rouge.html
+++ b/fil_rouge.html
@@ -7,22 +7,46 @@
     <script src="https://kit.fontawesome.com/6973d4f0f1.js" crossorigin="anonymous"></script>
     <title>fil rouge</title>
 </head>
-<header>
-    <section id="step1"> 
-    <p><span class="macouleur1">SOLÈNE AVRIL</span><span class="macouleur2">.</span></p></section>
-    <section id="step2">
-        <div style="float:right; width:400px;">
-        <i class="fa-brands fa-facebook" style="color : white ;"></i>
-        <i class="fa-brands fa-instagram" style="color: white " ></i>
-        <i class="fa-brands fa-linkedin" style="color : white" ></i>
-        <i class="fa-solid fa-circle-half-stroke" style="color: white "></i></div></section>
-        <HR ALIGN=CENTER WIDTH="1000">
-    <h2>
-    
-    </h2>
-</header>
 <body>
+    <header id="ligne_haut"> 
+        <h2><span class="macouleur1">SOLÈNE AVRIL</span><span class="macouleur2">.</span></h2>
+        <section id="logo">
+            <i class="fa-brands fa-facebook" style="color : white ;"></i>
+            <i class="fa-brands fa-instagram" style="color: white " ></i>
+            <i class="fa-brands fa-linkedin" style="color : white" ></i>
+            <i class="fa-solid fa-circle-half-stroke" style="color: white "></i>
+        </section>
+    
+    </header>
+    <hr>
+    <main>
         <h1><p><span class="macouleur1">Hello,<br> Je suis photographe d'art,</br></span><span class="macouleur2"> créative & engagée.</span></p></h1>
-       <p><span class="macouleur3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis augue magna. Fusce fringilla purus et sapien euismod ullamcorper. In lorem tellus, sollicitudin in feugiat sed, sodales vel leo. </span></p>
+        <p><span class="macouleur3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis augue magna. Fusce fringilla purus et sapien euismod ullamcorper. In lorem tellus, sollicitudin in feugiat sed, sodales vel leo. </span></p>
+        <nav>
+            <p>Nature</p>
+            <p id="fond">Portrait</p>
+            <p>Art</p>
+            <p>Urbain</p>
+            <p>Animaux</p> 
+        </nav>
+        <section id="grid_container">
+            <div><img src="https://picsum.photos/200/300?random=1"></div>
+            <div><img src="https://picsum.photos/200/300?random=2"></div>
+            <div><img src="https://picsum.photos/200/300?random=3"></div>
+            <div><img src="https://picsum.photos/200/300?random=4"></div>
+            <div><img src="https://picsum.photos/200/300?random=5"></div>
+            <div><img src="https://picsum.photos/200/300?random=6"></div>
+            <div><img src="https://picsum.photos/200/300?random=7"></div>
+            <div><img src="https://picsum.photos/200/300?random=8"></div>
+            <div><img src="https://picsum.photos/200/300?random=9"></div>
+            <div><img src="https://picsum.photos/200/300?random=10"></div>
+            <div><img src="https://picsum.photos/200/300?random=11"></div>
+            <div><img src="https://picsum.photos/200/300?random=12"></div>
+            <div><img src="https://picsum.photos/200/300?random=13"></div>
+            <div><img src="https://picsum.photos/200/300?random=14"></div>
+            <div><img src="https://picsum.photos/200/300?random=15"></div>
+        </section>
+    </main>
+    <footer>2024 SOLÈNE AVRIL</footer>
 </body>
 </html>
